--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href=style.css rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <script defer src="script.js"></script>
     <title>Code Quiz</title>
 </head>
 <body>
     <div class="container"></div>
-    <div id ="quiz questions" class="hidden"></div>
+    <div id ="quizquestions" class="hidden"></div>
     <div id = "answers" class= "ansgrid">
         <button class="ans-btn">answer1</button>
         <button class="ans-btn">answer2</button>
@@ -19,7 +19,7 @@
     </div> 
 
     <div class="startquiz"></div>
-    <button id="start-btn" class="start-btn btn">Start Quiz</button>
+    <button id="startbtn" class="start-btn btn">Start Quiz</button>
 </body>
 </html>
 <!-- make the quiz mulitiple choice
