code quiz push 3 wip

--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
 <body>
     <div class="container"></div>
     <div id ="quizquestions" class="hidden"></div>
-    <div id = "answers" class= "ansgrid">
-        <button class="ans-btn">answer1</button>
-        <button class="ans-btn">answer2</button>
-        <button class="ans-btn">answer3</button>
-        <button class="ans-btn">answer4</button>
+    <div id = "questions" class= "quesgrid">
+        <button class="ques-btn">question1</button>
+        <button class="ques-btn">>question2</button>
+        <button class="ques-btn">question3</button>
+        <button class="ques-btn">question4</button>
     </div> 
 
     <div class="startquiz"></div>
     <button id="startbtn" class="start-btn btn">Start Quiz</button>
+    <button id="nextbtn" class="next-btn-btn ">Next question</button>
+    <div>Time: <span id="time">1:00</span></div>
+
 </body>
 </html>
 <!-- make the quiz mulitiple choice
